-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8081936 | emb-9 | Thomas Schatzl | P3 | Resolved | Fixed | b64 |
| JDK-8086490 | 8u65 | Thomas Schatzl | P3 | Resolved | Fixed | b01 |
| JDK-8078250 | 8u60 | Thomas Schatzl | P3 | Resolved | Fixed | b14 |
| JDK-8137559 | emb-8u65 | Unassigned | P3 | Resolved | Fixed | b01 |
| JDK-8079938 | emb-8u60 | Thomas Schatzl | P3 | Resolved | Fixed | team |
- backported by
-
JDK-8078250 SPECjvm2008-Derby -2.7% performance regression on Solaris-X64 starting with 9-b29
-
- Resolved
-
-
JDK-8079938 SPECjvm2008-Derby -2.7% performance regression on Solaris-X64 starting with 9-b29
-
- Resolved
-
-
JDK-8081936 SPECjvm2008-Derby -2.7% performance regression on Solaris-X64 starting with 9-b29
-
- Resolved
-
-
JDK-8086490 SPECjvm2008-Derby -2.7% performance regression on Solaris-X64 starting with 9-b29
-
- Resolved
-
-
JDK-8137559 SPECjvm2008-Derby -2.7% performance regression on Solaris-X64 starting with 9-b29
-
- Resolved
-
- duplicates
-
JDK-8073663 Use size_t for indices in G1PageBasedVirtualSpace/G1RegionToSpaceMapper files
-
- Closed
-
- is blocked by
-
JDK-8066875 VirtualSpace does not use large pages
-
- Resolved
-
- relates to
-
JDK-8077255 TracePageSizes output reports wrong page size on Windows with G1
-
- Resolved
-
-
JDK-8073245 Known Issue: Performance degradation on G1 on Solaris when large pages are requested
-
- Closed
-
-
JDK-8073663 Use size_t for indices in G1PageBasedVirtualSpace/G1RegionToSpaceMapper files
-
- Closed
-