8058354: SPECjvm2008-Derby -2.7% performance regression on Solaris-X64 starting with 9-b29

Allow use of large pages for auxiliary data structures in G1. Clean up existing interfaces.

Reviewed-by: jmasa, pliden, stefank